--- a/Lists_and_Arrays.ipynb
+++ b/Lists_and_Arrays.ipynb
@@ -359,7 +359,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Bonus Problem: Alter the list below, so that every even value is left the same and every odd value is multiplied by -1. (Might have to consult Stack Exchange).**\n"
+    "**Problem: Alter the list below, so that every even value is left the same and every odd value is multiplied by -1. (Might have to consult Stack Exchange).**\n"
    ]
   },
   {
