Another small fix

--- a/Lists_and_Arrays.ipynb
+++ b/Lists_and_Arrays.ipynb
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -425,15 +425,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "b.pop()\n",
     "b.pop(3)\n",
     "b.append(36)\n",
-    "b.insert(2, 80)"
+    "b.insert(2, 80)\n",
+    "b.remove(11)"
    ]
   },
   {
